--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "rules": {
         "no-unused-vars": 0,
         "import/prefer-default-export": 0,
-        "react/jsx-filename-extension": 0
+        "react/jsx-filename-extension": 0,
+        "react/forbid-prop-types": 0
     }
 }
