Separating guide url and search url

--- a/src/util/config.json
+++ b/src/util/config.json
@@ -1,4 +1,5 @@
 {
+  "guideUrl": "http://localhost:8080/api/guide",
   "searchUrl": "http://localhost:8080/api/search",
   "feedbackUrl": "http://localhost:8080/api/feedback"
 }
